syntax = "proto3";

package ito;

import "buf/validate/validate.proto";

service ItoService {
  // Streams audio chunks from the client and gets a single response.
  // This is the ideal method for dictation to reduce latency and memory usage.
  rpc TranscribeStream(stream AudioChunk) returns (TranscriptionResponse);

  // Enhanced streaming transcription that accepts configuration data in-stream.
  // Config can be sent before, during, or omitted entirely. Multiple config messages
  // are merged by the server. This allows immediate streaming without waiting for context.
  rpc TranscribeStreamV2(stream TranscribeStreamRequest) returns (TranscriptionResponse);

  // Note Service
  rpc CreateNote(CreateNoteRequest) returns (Note);
  rpc GetNote(GetNoteRequest) returns (Note);
  rpc ListNotes(ListNotesRequest) returns (ListNotesResponse);
  rpc UpdateNote(UpdateNoteRequest) returns (Note);
  rpc DeleteNote(DeleteNoteRequest) returns (Empty);

  // Interaction Service
  rpc CreateInteraction(CreateInteractionRequest) returns (Interaction);
  rpc GetInteraction(GetInteractionRequest) returns (Interaction);
  rpc ListInteractions(ListInteractionsRequest) returns (ListInteractionsResponse);
  rpc UpdateInteraction(UpdateInteractionRequest) returns (Interaction);
  rpc DeleteInteraction(DeleteInteractionRequest) returns (Empty);

  // Dictionary Service
  rpc CreateDictionaryItem(CreateDictionaryItemRequest) returns (DictionaryItem);
  rpc ListDictionaryItems(ListDictionaryItemsRequest) returns (ListDictionaryItemsResponse);
  rpc UpdateDictionaryItem(UpdateDictionaryItemRequest) returns (DictionaryItem);
  rpc DeleteDictionaryItem(DeleteDictionaryItemRequest) returns (Empty);

  // User Data Service
  rpc DeleteUserData(DeleteUserDataRequest) returns (Empty);

  // Advanced Settings Service
  rpc GetAdvancedSettings(GetAdvancedSettingsRequest) returns (AdvancedSettings);
  rpc UpdateAdvancedSettings(UpdateAdvancedSettingsRequest) returns (AdvancedSettings);
}

service TimingService {
  // Submit timing reports for interaction analytics
  rpc SubmitTimingReports(SubmitTimingReportsRequest) returns (SubmitTimingReportsResponse);
}

// =================================================================
// Messages
// =================================================================

// General
// -----------------------------------------------------------------
message Empty {}

enum ItoMode {
  TRANSCRIBE = 0;
  EDIT = 1;
}

// Error Types
// -----------------------------------------------------------------
enum ClientProvider {
  GROQ = 0;
  CEREBRAS = 1;
}

enum ErrorType {
  CONFIGURATION = 0;
  AVAILABILITY = 1;
  AUDIO = 2;
  API = 3;
}

message ClientError {
  string code = 1;
  ErrorType type = 2;
  string message = 3;
  ClientProvider provider = 4;
  map<string, string> details = 5;
}

// Transcription
// -----------------------------------------------------------------
// A chunk of audio data for streaming.
message AudioChunk {
  bytes audio_data = 1 [(buf.validate.field).bytes.max_len = 1048576]; // 1 MB limit per chunk
}

// Context information for transcription.
message ContextInfo {
  optional string window_title = 1;
  optional string app_name = 2;
  optional string context_text = 3;
  optional ItoMode mode = 4;
  optional string browser_url = 5;
  optional string browser_domain = 6;
}

// Configuration that can be sent in-stream for TranscribeStreamV2.
// All fields are optional and will be merged by the server.
// Multiple config messages received during the stream are progressively merged.
message StreamConfig {
  optional ContextInfo context = 1;
  optional LlmSettings llm_settings = 2;
  repeated string vocabulary = 3;
  optional string interaction_id = 4;
}

// Request message for TranscribeStreamV2.
// Can contain either configuration or audio data.
message TranscribeStreamRequest {
  oneof payload {
    StreamConfig config = 1;      // Configuration/context data
    bytes audio_data = 2 [(buf.validate.field).bytes.max_len = 1048576]; // Audio chunk (1 MB limit)
  }
}

// The response message containing the final transcript.
message TranscriptionResponse {
  string transcript = 1;
  ClientError error = 2;
}

// Notes
// -----------------------------------------------------------------
message Note {
  string id = 1;
  string user_id = 2;
  string interaction_id = 3;
  string content = 4;
  string created_at = 5;
  string updated_at = 6;
  string deleted_at = 7;
}

message CreateNoteRequest {
  string id = 1;
  string interaction_id = 2;
  string content = 3;
}

message GetNoteRequest {
  string id = 1;
}

message ListNotesRequest {
  string since_timestamp = 1; // Optional. ISO 8601 format. If not provided, fetch all.
}

message ListNotesResponse {
  repeated Note notes = 1;
}

message UpdateNoteRequest {
  string id = 1;
  string content = 2;
}

message DeleteNoteRequest {
  string id = 1;
}

// Interactions
// -----------------------------------------------------------------
message Interaction {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string asr_output = 4; // JSON string
  string llm_output = 5; // JSON string
  bytes raw_audio = 6 [(buf.validate.field).bytes.max_len = 100000000]; // 100 MB limit 
  int32 duration_ms = 7; // Duration in milliseconds
  string created_at = 8;
  string updated_at = 9;
  string deleted_at = 10;
  optional string raw_audio_id = 11; // UUID reference to S3 stored audio
}

message CreateInteractionRequest {
  string id = 1;
  string title = 2;
  string asr_output = 3;
  string llm_output = 4;
  bytes raw_audio = 5 [(buf.validate.field).bytes.max_len = 100000000]; // 100 MB limit
  int32 duration_ms = 6; // Duration in milliseconds
}

message GetInteractionRequest {
  string id = 1;
}

message ListInteractionsRequest {
  string since_timestamp = 1; // Optional. ISO 8601 format. If not provided, fetch all.
}

message ListInteractionsResponse {
  repeated Interaction interactions = 1;
}

message UpdateInteractionRequest {
  string id = 1;
  string title = 2;
}

message DeleteInteractionRequest {
  string id = 1;
}

// Dictionary
// -----------------------------------------------------------------
message DictionaryItem {
  string id = 1;
  string user_id = 2;
  string word = 3;
  string pronunciation = 4;
  string created_at = 5;
  string updated_at = 6;
  string deleted_at = 7;
}

message CreateDictionaryItemRequest {
  string id = 1;
  string word = 2;
  string pronunciation = 3;
}

message ListDictionaryItemsRequest {
  string since_timestamp = 1; // Optional. ISO 8601 format. If not provided, fetch all.
}

message ListDictionaryItemsResponse {
  repeated DictionaryItem items = 1;
}

message UpdateDictionaryItemRequest {
  string id = 1;
  string word = 2;
  string pronunciation = 3;
}

message DeleteDictionaryItemRequest {
  string id = 1;
}

// User Data
// -----------------------------------------------------------------
message DeleteUserDataRequest {
  // Empty - user_id will be extracted from the authenticated user's token
}

// Advanced Settings
// -----------------------------------------------------------------

message LlmSettings {
  optional string asr_model = 1;
  optional string asr_provider = 2;
  optional string asr_prompt = 3;
  optional string llm_provider = 4;
  optional string llm_model = 5;
  optional float llm_temperature = 6;
  optional string transcription_prompt = 7;
  optional string editing_prompt = 8;
  optional float no_speech_threshold = 9;
  optional float low_quality_threshold = 10;
}

message AdvancedSettings {
  string id = 1;
  string user_id = 2;
  string created_at = 3;
  string updated_at = 4;
  LlmSettings llm = 5;
  LlmSettings default = 6;
}

message GetAdvancedSettingsRequest {
  // Empty - user_id will be extracted from the authenticated user's token
}

message UpdateAdvancedSettingsRequest {
  LlmSettings llm = 1;
}

// Timing Analytics
// -----------------------------------------------------------------
message TimingEvent {
  string name = 1;
  double start_ms = 2;
  optional double end_ms = 3;
  optional double duration_ms = 4;
}

message TimingReport {
  string interaction_id = 1;
  string user_id = 2;
  string platform = 3;
  string app_version = 4;
  string hostname = 5;
  string architecture = 6;
  string timestamp = 7;
  repeated TimingEvent events = 8;
  double total_duration_ms = 9;
}

message SubmitTimingReportsRequest {
  repeated TimingReport reports = 1;
}

message SubmitTimingReportsResponse {
  // Empty response
}